@@ -1,5 +1,6 @@
 2013-04-21  Xavier Perseguers  <xavier@causal.ch>
 
+	* [TASK] Add button to generate LaTeX output
 	* [TASK] Generate complete conf.py
 
 2013-04-19  Xavier Perseguers  <xavier@causal.ch>
